# Dsp

./: .gitignore  CMakeLists.txt  Dsp.sln  Dsp.sln.DotSettings  Dsp.vcxproj  Dsp.vcxproj.filters  README.md
Dsp_Linux/: Dsp_Linux.vcxproj  Dsp_Linux.vcxproj.filters
UnitTests/: UnitTests.vcxproj  benchmark_results.py  dsp_benchmark.csv  test.cpp
doc/: Doxyfile
doc/html/: _dsp_8h_source.html  _fft_8h_source.html  _legacy_dsp_8h_source.html  _legacy_signal_8h_source.html  _signal_8h_source.html  _transform_8h_source.html  _utilities_8h_source.html  _window_8h_source.html  annotated.html  annotated_dup.js  class_complex_signal-members.html  class_complex_signal.html  class_complex_signal.js  class_dsp_1_1_transform-members.html  class_dsp_1_1_transform.html  class_dsp_1_1_transform.js  class_template_signal-members.html  class_template_signal.html  class_template_signal.js  classdsp_1_1_signal-members.html  classdsp_1_1_signal.html  classdsp_1_1_signal.js  classes.html  convert_8h_source.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_68267d1309a1af8e8297ef4c3efbcdba.js  dir_93d3d82ef3f103cf2c243514b6ce2378.html  dir_93d3d82ef3f103cf2c243514b6ce2378.js  dsp_8h_source.html  fft_8h_source.html  files.html  filter_8h_source.html  functions.html  functions_vars.html  index.html  menudata.js  namespace_dsp.html  namespace_dsp.js  namespacedsp.html  namespacedsp.js  (+21 more)
doc/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  enums_0.js  enums_1.js  enums_2.js  enums_3.js  enums_4.js  functions_0.js  functions_1.js  functions_10.js  functions_11.js  functions_12.js  functions_13.js  functions_14.js  functions_2.js  functions_3.js  (+15 more)
doc/latex/: annotated.tex  class_complex_signal.tex  class_dsp_1_1_transform.tex  class_template_signal.tex  classdsp_1_1_signal.tex  namespace_dsp.tex  namespacedsp.tex  namespacedsp_1_1convert.tex  namespacedsp_1_1fft.tex  namespacedsp_1_1filter.tex  namespacedsp_1_1signals.tex  namespacedsp_1_1special.tex  namespacedsp_1_1window.tex  namespacedsp_1_1window_1_1utilities.tex  namespaces.tex  refman.tex
include/: Signal.h  convert.h  fft.h  filter.h  stats.h  utilities.h
scripts/: benchmark_results.py  generate_ref_output.m  tmp.txt
src/: CMakeLists.txt  Dsp.cpp  Dsp.h  Fft.cpp  Fft.h  Signal.cpp  Signal.h  Transform.h  Utilities.cpp  Utilities.h  Window.cpp  Window.h  convert.cpp  fft.cpp  fft.h  filter.cpp  filter.h  signals.cpp  signals.h  special.cpp  special.h  stats.h  utilities.cpp  utilities.h  window.cpp  window.h
src/Legacy/: LegacyDsp.cpp  LegacyDsp.h  LegacySignal.cpp  LegacySignal.h
test/: CMakeLists.txt  dct_ref_data.h  dsp_benchmark.csv  spectrogram_test_data.h  stft_test_data.h  test.cpp
